--- a/src/Brioche/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/layout.html.twig
@@ -1,6 +1,117 @@
-<html>
+<!DOCTYPE html>
+<html lang="fr">
     <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        
+        <title>{% block title %}Brioche du Dimanche{% endblock %}</title>
+
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//bootswatch.com/united/bootstrap.min.css">
+        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css">
+        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/select2/3.5.0/select2.min.css">
+        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/select2/3.5.0/select2-bootstrap.min.css">
+        
+        {% stylesheets
+            'bundles/briochecore/css/*'
+            filter='cssrewrite'
+        %}
+            <link rel="stylesheet" type="text/css" href="{{ asset_url }}" />
+        {% endstylesheets %}
+
+        <!--[if lt IE 9]>
+          <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+          <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <![endif]-->
     </head>
     <body>
+        <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">Brioche du Dimanche</a>
+                </div>
+
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="#">Accueil</a></li>
+                        <li><a href="#">A propos</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#">Aide</a></li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Menu <span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li><a href="#">Action</a></li>
+                                <li><a href="#">Another action</a></li>
+                                <li><a href="#">Something else here</a></li>
+                                <li class="divider"></li>
+                                <li><a href="#">Separated link</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        
+        {% block body %}
+        {% endblock %}
+        
+        <section class="next-tournees">
+            <h2 class="text-center">Prochaines tournées</h2>
+            <br />
+            <div class="row">
+                <div class="col-md-4 col-md-offset-4">
+                    <div class="center-block tournees">
+                        <div class="btn-group tournee">
+                            <button class="btn btn-primary btndate" role="button">
+                                <p class="date">Dimanche 31 Août</p>
+                                <p class="count"><small>Commandes :</small> 4 / 5</p>
+                            </button>
+                            <button class="btn btn-success btnaction" role="button">
+                                <span class="glyphicon glyphicon-ok-circle"></span>
+                            </button>
+                        </div>
+                        <div class="btn-group tournee">
+                            <button class="btn btn-primary btndate" role="button">
+                                <p class="date">Dimanche 14 Septembre</p>
+                                <p class="count"><small>Commandes :</small> 1 / 5</p>
+                            </button>
+                            <button class="btn btn-success btnaction" role="button">
+                                <span class="glyphicon glyphicon-ok-circle"></span>
+                            </button>
+                        </div>
+                        <div class="btn-group tournee">
+                            <button class="btn btn-primary btndate" role="button">
+                                <p class="date">Dimanche 28 Septembre</p>
+                                <p class="count"><small>Commandes :</small> 0 / 5</p>
+                            </button>
+                            <button class="btn btn-success btnaction" role="button">
+                                <span class="glyphicon glyphicon-ok-circle"></span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
+        <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/select2/3.5.0/select2.min.js"></script>
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/select2/3.5.0/select2_locale_fr.min.js"></script>
+        
+        {% javascripts
+            '@BriocheCoreBundle/Resources/public/js/*'
+        %}
+                <script src="{{ asset_url }}" type="text/javascript"></script>
+        {% endjavascripts %}
     </body>
 </html>
