integration steps index

--- a/src/Brioche/CoreBundle/Resources/views/Front/index.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Front/index.html.twig
@@ -1,6 +1,61 @@
 {% extends "BriocheCoreBundle::layout.html.twig" %}
 
 {% block body %}
+<section class="steps">
+    <h2 class="text-center">Fonctionnement</h2>
+    <br />
+    <div class="row">
+        <div class="col-xs-8 col-xs-offset-2">
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <h3>Commande</h3>
+                            <br />
+                            <p>
+                                <img src="//dummyimage.com/256" alt="alt" class="img-circle img-thumbnail img-responsive">
+                                <br />
+                                <br />
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                Sed vulputate facilisis odio, blandit feugiat enim ultricies quis.
+                                Nullam pulvinar mi vitae ornare viverra.
+                                Duis tempor nibh non tempor condimentum.
+                            </p>
+                            <hr class="visible-xs-block" />
+                        </div>
+                        <div class="col-sm-4">
+                            <h3>Fabrication</h3>
+                            <br />
+                            <p>
+                                <img src="//dummyimage.com/256" alt="alt" class="img-circle img-thumbnail img-responsive">
+                                <br />
+                                <br />
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                Sed vulputate facilisis odio, blandit feugiat enim ultricies quis.
+                                Nullam pulvinar mi vitae ornare viverra.
+                                Duis tempor nibh non tempor condimentum.
+                            </p>
+                            <hr class="visible-xs-block" />
+                        </div>
+                        <div class="col-sm-4">
+                            <h3>Tournée</h3>
+                            <br />
+                            <p>
+                                <img src="//dummyimage.com/256" alt="alt" class="img-circle img-thumbnail img-responsive">
+                                <br />
+                                <br />
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                Sed vulputate facilisis odio, blandit feugiat enim ultricies quis.
+                                Nullam pulvinar mi vitae ornare viverra.
+                                Duis tempor nibh non tempor condimentum.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+</section>
+
 <section class="next-tournees">
     <h2 class="text-center">Prochaines tournées</h2>
     <br />
