--- a/src/Brioche/CoreBundle/Resources/public/css/style.css
+++ b/src/Brioche/CoreBundle/Resources/public/css/style.css
@@ -44,3 +44,14 @@ body {
 .padd {
     padding: 16px;
 }
+.steps h3 {
+    text-align: center;
+}
+.steps p {
+    font-size: 16px;
+    text-align: center;
+}
+.steps p img {
+    width: 75%;
+    max-width: 200px;
+}
