brioche building workflow

--- a/src/Brioche/CoreBundle/Resources/views/Brioche/personalize.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Brioche/personalize.html.twig
@@ -8,26 +8,26 @@
         <div class="col-sm-6 col-sm-offset-3">
             <div class="thumbnail">
                 <img src="http://dummyimage.com/800x200/ababab/515151.jpg" alt="alt">
-                <h3 class="text-center">Vendéene 250</h3>
+                <h3 class="text-center">{{ brioche.typeTitle }} {{ brioche.size.value }}</h3>
                 <div class="padd">
                     <p class="lead">
                         Et est admodum mirum videre plebem innumeram mentibus ardore
                         quodam infuso cum dimicationum curulium eventu pendentem.
                     </p>
-                    <form class="form-horizontal" role="form">
+                    <form class="form-horizontal" role="form" method="post">
                         <div class="form-group">
                             <label for="butter" class="col-xs-4 control-label">Beurre</label>
                             <input
                                 id="slider-butter"
                                 type="text"
                                 name="butter"
-                                value="1"
+                                value="{{ brioche.butter }}"
                                 class="span2"
                                 style="width: 200px"
                                 data-slider-min="0"
                                 data-slider-max="2"
                                 data-slider-step="1"
-                                data-slider-value="1"
+                                data-slider-value="{{ brioche.butter }}"
                                 data-slider-formater="formaterButter"
                             />
                         </div>
@@ -38,23 +38,28 @@
                                 id="slider-sugar"
                                 type="text"
                                 name="sugar"
-                                value="1"
+                                value="{{ brioche.sugar }}"
                                 class="span2"
                                 style="width: 200px"
                                 data-slider-min="0"
                                 data-slider-max="2"
                                 data-slider-step="1"
-                                data-slider-value="1"
+                                data-slider-value="{{ brioche.sugar }}"
                                 data-slider-formater="formaterSugar"
                             />
                         </div>
 
                         <div class="form-group">
-                            <label for="extra" class="col-xs-4 control-label">Agréments (+2€)</label>
+                            <label for="extra" class="col-xs-4 control-label">Agrément</label>
                             <select id="extra" name="extra" class="extra-selector select2">
-                                <option value="0">Nature</option>
-                                <option value="1">Raisins secs</option>
-                                <option value="2">Figue</option>
+                                {% for extra in extras %}
+                                    <option value="{{ extra.id }}"{% if brioche.extra.id == extra.id %} selected="selected"{% endif %}>
+                                        {{ extra.title }}
+                                        {% if extra.price > 0 %}
+                                            (+ {{ extra.price }} €)
+                                        {% endif %}
+                                    </option>
+                                {% endfor %}
                             </select>
                         </div>
                         <div class="text-center">
