--- a/src/Brioche/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/layout.html.twig
@@ -69,7 +69,18 @@
         <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/select2/3.5.0/select2.min.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/select2/3.5.0/select2_locale_fr.min.js"></script>
-        
+
+        {% javascripts
+            '@PhaxCoreBundle/Resources/public/js/*'
+        %}
+            <script src="{{ asset_url }}" type="text/javascript"></script>
+        {% endjavascripts %}
+        <script type="text/javascript">
+            var phaxConfig = {
+                www_script: '{{ path('phax_script') }}'
+            }
+        </script>
+
         {% javascripts
             '@BriocheCoreBundle/Resources/public/js/*'
         %}
