--- a/src/Brioche/CoreBundle/Resources/views/Brioche/type.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Brioche/type.html.twig
@@ -1,6 +1,8 @@
 {% extends "BriocheCoreBundle::layout.html.twig" %}
 
 {% block body %}
+{% include 'BriocheCoreBundle:Brioche:_wizard.html.twig' %}
+
 <section class="type">
     <h2 class="text-center">Type de brioche</h2>
     <br />
