--- a/src/Brioche/CoreBundle/Resources/views/Front/index.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Front/index.html.twig
@@ -1,7 +1,7 @@
 {% extends "BriocheCoreBundle::layout.html.twig" %}
 
 {% block body %}
-<section class="steps">
+<section class="home-steps">
     <h2 class="text-center">Fonctionnement</h2>
     <br />
     <div class="row">
