--- a/src/Brioche/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/layout.html.twig
@@ -14,6 +14,8 @@
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/select2/3.5.0/select2-bootstrap.min.css">
         
         {% stylesheets
+            'bundles/briochecore/css/fuelux-wizard.css'
+            'bundles/briochecore/css/slider.css'
             'bundles/briochecore/css/*'
             filter='cssrewrite'
         %}
