--- a/src/Brioche/CoreBundle/Resources/views/Brioche/personalize.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Brioche/personalize.html.twig
@@ -1,6 +1,8 @@
 {% extends "BriocheCoreBundle::layout.html.twig" %}
 
 {% block body %}
+{% include 'BriocheCoreBundle:Brioche:_wizard.html.twig' %}
+
 <section class="personalize">
     <h2 class="text-center">Touche personnelle</h2>
     <br />
