--- a/src/Brioche/CoreBundle/Resources/views/Brioche/_wizard.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Brioche/_wizard.html.twig
@@ -4,7 +4,7 @@
             <ul class="steps">
                 {% set steps = [
                     {
-                        route: 'brioche_type',
+                        route: 'brioche_round',
                         title: 'Tournée',
                         complete: brioche.getValidRound
                     },
