--- a/src/Brioche/CoreBundle/Resources/views/Brioche/round.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Brioche/round.html.twig
@@ -1,37 +1,30 @@
+{% extends "BriocheCoreBundle::layout.html.twig" %}
+
+{% block body %}
+{% include 'BriocheCoreBundle:Brioche:_wizard.html.twig' %}
+
 <section class="round">
     <h2 class="text-center">Prochaines tournées</h2>
     <br />
     <div class="row">
         <div class="col-md-4 col-md-offset-4">
             <div class="center-block tournees">
-                <div class="btn-group tournee">
-                    <button class="btn btn-primary btndate" role="button">
-                        <p class="date">Dimanche 31 Août</p>
-                        <p class="count"><small>Commandes :</small> 4 / 5</p>
-                    </button>
-                    <button class="btn btn-success btnaction" role="button">
-                        <span class="glyphicon glyphicon-ok-circle"></span>
-                    </button>
-                </div>
-                <div class="btn-group tournee">
-                    <button class="btn btn-primary btndate" role="button">
-                        <p class="date">Dimanche 14 Septembre</p>
-                        <p class="count"><small>Commandes :</small> 1 / 5</p>
-                    </button>
-                    <button class="btn btn-success btnaction" role="button">
-                        <span class="glyphicon glyphicon-ok-circle"></span>
-                    </button>
-                </div>
-                <div class="btn-group tournee">
-                    <button class="btn btn-primary btndate" role="button">
-                        <p class="date">Dimanche 28 Septembre</p>
-                        <p class="count"><small>Commandes :</small> 0 / 5</p>
-                    </button>
-                    <button class="btn btn-success btnaction" role="button">
-                        <span class="glyphicon glyphicon-ok-circle"></span>
-                    </button>
-                </div>
+                {% for round in rounds %}
+                    <div class="btn-group tournee" data-round-id="{{ round.id }}">
+                        <button class="btn btn-primary btndate" role="button">
+                            <p class="date">{{ round.date|localizeddate('none', 'none', 'fr', null, 'EEEE d MMMM') }}</p>
+                            <p class="count"><small>Commandes :</small> {{ round.dummy + round.brioches|length }} / {{ round.maximum }}</p>
+                        </button>
+                        <button class="btn btn-success btnaction" role="button">
+                            <span class="glyphicon glyphicon-ok-circle"></span>
+                        </button>
+                    </div>
+                {% endfor %}
             </div>
+            <form method="post" class="form-round">
+                <input type="hidden" name="round" />
+            </form>
         </div>
     </div>
 </section>
+{% endblock %}
