--- a/src/Brioche/CoreBundle/Resources/views/Brioche/_wizard.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Brioche/_wizard.html.twig
@@ -29,8 +29,8 @@
                         complete: brioche.getValidAddress
                     },
                     {
-                        route: 'brioche_type',
-                        title: 'Paiement',
+                        route: 'brioche_summary',
+                        title: 'Résumé',
                         complete: false
                     }
                 ] %}
