--- a/src/Brioche/CoreBundle/Resources/views/Brioche/size.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Brioche/size.html.twig
@@ -10,7 +10,7 @@
         <div class="col-sm-6 col-sm-offset-3">
             <div class="thumbnail">
                 <img src="http://dummyimage.com/800x200/ababab/515151.jpg" alt="alt">
-                <h3 class="text-center">Vendéene</h3>
+                <h3 class="text-center">{{ brioche.typeTitle }}</h3>
                 <br />
                 <ul class="nav nav-tabs nav-justified" id="size-tab" role="tablist">
                     {% for size in sizes %}
