change 'personalize' to 'perso'

--- a/src/Brioche/CoreBundle/Resources/views/Brioche/_wizard.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Brioche/_wizard.html.twig
@@ -19,7 +19,7 @@
                         complete: brioche.getValidSize
                     },
                     {
-                        route: 'brioche_personalize',
+                        route: 'brioche_perso',
                         title: 'Touche personnelle',
                         complete: brioche.getValidPerso
                     },
