--- a/src/Brioche/CoreBundle/Resources/views/Brioche/perso.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Brioche/perso.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 {% include 'BriocheCoreBundle:Brioche:_wizard.html.twig' %}
 
-<section class="personalize">
+<section class="perso">
     <h2 class="text-center">Touche personnelle</h2>
     <br />
     <div class="row">
