--- a/src/Brioche/CoreBundle/Resources/views/Brioche/summary.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Brioche/summary.html.twig
@@ -60,11 +60,11 @@
                                 {% endif %}
 
                                 Agrément : <b>{{ brioche.extra.title }}</b><br />
-                                <a href="{{ path('brioche_personalize') }}">Modifier</a>
+                                <a href="{{ path('brioche_perso') }}">Modifier</a>
                             </p>
                         {% else %}
                             <div class="well">
-                                <a href="{{ path('brioche_personalize') }}">Choisir</a>
+                                <a href="{{ path('brioche_perso') }}">Choisir</a>
                             </div>
                         {% endif %}
                     </div>
