use AlcalynPayplugBundle, redirect to payment page, add firstname and lastname to client

--- a/src/Brioche/CoreBundle/Resources/views/Brioche/summary.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Brioche/summary.html.twig
@@ -94,7 +94,7 @@
                         <h4>Adresse de livraison</h4>
                         {% if brioche.getValidAddress %}
                             <address style="margin-bottom:0">
-                                <strong>{{ client.name }}</strong><br />
+                                <strong>{{ client.firstName }} {{ client.lastName }}</strong><br />
                                 {{ client.address }}<br />
                                 {{ client.city.postalcode }} {{ client.city.title }}<br />
 
@@ -143,12 +143,12 @@
                             </table>
 
                             <div class="text-center">
-                                <button type="button" class="btn btn-primary">Payer tout maintenant</button>
+                                <a href="{{ pay_full_url }}" type="button" class="btn btn-primary">Payer tout maintenant</a>
                                 <br /><br />
                                 Vous pouvez payer la moitié maintenant par carte,<br />
                                 et le reste Dimanche matin en liquide.
                                 <br />
-                                <button type="button" class="btn btn-primary">Payer la moitié maintenant et le reste en liquide</button>
+                                <a href="{{ pay_half_url }}" type="button" class="btn btn-primary">Payer la moitié maintenant et le reste en liquide</a>
                             </div>
                         </div>
                     </div>
