brioche lock and validated, ipn

--- a/src/Brioche/CoreBundle/Resources/views/Front/index.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Front/index.html.twig
@@ -55,4 +55,11 @@
             </div>
         </div>
 </section>
+
+<section class="round">
+    <h2 class="text-center">Prochaines tournées</h2>
+    <br />
+    
+    {% include 'BriocheCoreBundle::_rounds.html.twig' %}
+</section>
 {% endblock %}
