--- a/src/Brioche/CoreBundle/Resources/views/Brioche/summary.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Brioche/summary.html.twig
@@ -18,7 +18,9 @@
                             {% if brioche.getValidType %}
                                 <p>
                                     Type <b>{{ brioche.typeTitle }}</b><br />
-                                    <a href="{{ path('brioche_type') }}">Modifier</a>
+                                    {% if not brioche.validated %}
+                                        <a href="{{ path('brioche_type') }}">Modifier</a>
+                                    {% endif %}
                                 </p>
                             {% else %}
                                 <div class="well">
@@ -30,7 +32,9 @@
                                 <p>
                                     Taille {{ brioche.size.value }} (~{{ brioche.size.averageWeight }}g),<br />
                                     pour <b>{{ brioche.size.nbPeople }}</b> personnes<br />
-                                    <a href="{{ path('brioche_size') }}">Modifier</a>
+                                    {% if not brioche.validated %}
+                                        <a href="{{ path('brioche_size') }}">Modifier</a>
+                                    {% endif %}
                                 </p>
                             {% else %}
                                 <div class="well">
@@ -60,7 +64,9 @@
                                 {% endif %}
 
                                 Agrément : <b>{{ brioche.extra.title }}</b><br />
-                                <a href="{{ path('brioche_perso') }}">Modifier</a>
+                                {% if not brioche.validated %}
+                                    <a href="{{ path('brioche_perso') }}">Modifier</a>
+                                {% endif %}
                             </p>
                         {% else %}
                             <div class="well">
@@ -79,10 +85,11 @@
                                     <b>{{ brioche.round.date|localizeddate('none', 'none', 'fr', null, 'EEEE d MMMM') }}</b>
                                 </span>
                                 <br />
-                                <a href="{{ path('brioche_round') }}">Modifier</a><br />
+                                {% if not brioche.validated %}
+                                    <a href="{{ path('brioche_round') }}">Modifier</a><br />
+                                {% endif %}
                                 <br />
-                                Entre <b>7h45</b> et <b>8h15</b><br />
-                                <a href="#">Modifier</a>
+                                Entre <b>8h</b> et <b>9h</b><br />
                             </p>
                         {% else %}
                             <div class="well">
@@ -104,7 +111,9 @@
                                     </abbr> {{ client.email }}
                                 {% endif %}
                             </address>
-                            <a href="{{ path('brioche_address') }}">Modifier</a>
+                            {% if not brioche.validated %}
+                                <a href="{{ path('brioche_address') }}">Modifier</a>
+                            {% endif %}
                         {% else %}
                             <div class="well">
                                 <a href="{{ path('brioche_address') }}">Choisir</a>
@@ -113,10 +122,14 @@
                     </div>
                 </div>
 
-                {% if brioche.allValid %}
-                    <br /><br />
-                    <div class="row">
-                        <div class="col-md-10 col-md-offset-1">
+                <br /><br />
+                <div class="row">
+                    <div class="col-md-10 col-md-offset-1">
+                        {% if not brioche.allValid %}
+                            <p class="text-center">
+                                Votre brioche n'est pas terminée.
+                                <a href="{{ path('brioche_index') }}">Compléter les étapes manquantes</a>.</p>
+                        {% else %}
                             <h4 class="text-center">Prix</h4>
                             <table class="table table-striped table-hover price-table">
                                 <tbody>
@@ -135,17 +148,40 @@
                                 </tbody>
                             </table>
 
-                            <div class="text-center">
-                                <a href="{{ pay_full_url }}" type="button" class="btn btn-primary">Payer tout maintenant</a>
-                                <br /><br />
-                                Vous pouvez payer la moitié maintenant par carte,<br />
-                                et le reste Dimanche matin en liquide.
-                                <br />
-                                <a href="{{ pay_half_url }}" type="button" class="btn btn-primary">Payer la moitié maintenant et le reste en liquide</a>
-                            </div>
-                        </div>
+                            {% if not brioche.locked %}
+                                <div class="row">
+                                    <div class="col-md-10 col-md-offset-1">
+                                        <div class="text-center">
+                                            <form method="post">
+                                                <input type="submit" name="valid" value="Valider cette brioche" class="btn btn-primary" />
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+                            {% elseif not brioche.validated %}
+                                <div class="text-center">
+                                    <a href="{{ pay_full_url }}" type="button" class="btn btn-primary">Payer tout maintenant</a>
+                                    <br /><br />
+                                    Vous pouvez payer la moitié maintenant par carte,<br />
+                                    et le reste {{ brioche.round.date|localizeddate('none', 'none', 'fr', null, 'EEEE')|capitalize }} matin en liquide.
+                                    <br />
+                                    <a href="{{ pay_half_url }}" type="button" class="btn btn-primary">Payer la moitié maintenant et le reste en liquide</a>
+                                </div>
+                            {% else %}
+                                <div class="row">
+                                    <div class="col-md-10 col-md-offset-1">
+                                        <div class="text-center">
+                                            <p class="lead text-success">
+                                                <span class="glyphicon glyphicon-ok"></span>
+                                                Paiement reçu : <b>{{ brioche.paid|number_format(2, '.') }} €</b>
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            {% endif %}
+                        {% endif %}
                     </div>
-                {% endif %}
+                </div>
 
                 <br /><br />
             </div>
