--- a/src/Brioche/CoreBundle/Resources/views/_navbar.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/_navbar.html.twig
@@ -15,19 +15,16 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li class="{{ 'active'|onpath('front_index') }}"><a href="{{ path('front_index') }}">Accueil</a></li>
+                <li class="{{ 'active'|onpath() }}"><a href="{{ path('brioche_index') }}">Ma brioche</a></li>
                 <li class="{{ 'active'|onpath('front_products') }}"><a href="{{ path('front_products') }}">Produits et allergies</a></li>
-                <li><a href="#">A propos</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Aide</a></li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Menu <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Mon compte <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
+                        <li><a href="#">Mes informations</a></li>
                         <li class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
+                        <li><a href="#">Se déconnecter</a></li>
                     </ul>
                 </li>
             </ul>
